plugins {
    id 'java'
    id 'com.github.spotbugs' version '6.4.7'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.6'
}

apply from: 'linters.gradle'

group = 'ru.panyukovnn'
version = '1.0.0-RC1'

java.targetCompatibility = JavaVersion.VERSION_21
java.sourceCompatibility = JavaVersion.VERSION_21

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs("-XX:+EnableDynamicAgentLoading")
    systemProperty "file.encoding", "UTF-8"
}
